--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "express-session": "^1.18.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
+    "selenium-webdriver": "^4.38.0",
     "sqlite3": "^5.1.7",
     "winston": "^3.18.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
